Fix spacing and font size

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ main {
 	width: 5.6rem;
 	height: 13.6rem;
 	flex-direction: column;
-	margin-top: 3rem;
+	margin-top: 2.8rem;
 }
 .main__images {
 	min-width: 31.1rem;
@@ -344,7 +344,8 @@ footer {
 	}
 
 	.title-modern-use {
-		font-size: 1.6rem;
+		font-size: 1.8rem;
+		margin-top: 1rem;
 	}
 
 	.title-smarter-meetings {
